fix: synchronize raft log index allocation